security_rules.html modify

--- a/Web/templates/security_rules.html
+++ b/Web/templates/security_rules.html
@@ -46,6 +46,14 @@
         <label for="description">Description</label>
         <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
     </div>
+    <div class="form-group">
+        <label for="tactics">Description</label>
+        <textarea class="form-control" id="tactics" name="tactics" rows="3" required></textarea>
+    </div>
+    <div class="form-group">
+        <label for="technique">Description</label>
+        <textarea class="form-control" id="technique" name="technique" rows="3" required></textarea>
+    </div>
     <button type="submit" class="btn btn-primary">Add Rule</button>
 </form>
 
