--- a/Web/templates/security_rules.html
+++ b/Web/templates/security_rules.html
@@ -47,11 +47,11 @@
         <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
     </div>
     <div class="form-group">
-        <label for="tactics">Description</label>
+        <label for="tactics">Tactics</label>
         <textarea class="form-control" id="tactics" name="tactics" rows="3" required></textarea>
     </div>
     <div class="form-group">
-        <label for="technique">Description</label>
+        <label for="technique">Technique</label>
         <textarea class="form-control" id="technique" name="technique" rows="3" required></textarea>
     </div>
     <button type="submit" class="btn btn-primary">Add Rule</button>
