--- a/Web/templates/base.html
+++ b/Web/templates/base.html
@@ -4,6 +4,18 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap CSS 추가 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<style>
+    .wrap-text {
+        word-break: break-word; /* 긴 단어를 줄바꿈합니다 */
+        word-wrap: break-word; /* 내용이 넘치면 다음 줄로 이동합니다 */
+        overflow-wrap: break-word; /* 오버플로우되는 텍스트를 줄바꿈합니다 */
+        white-space: normal; /* 기본적인 공백 처리를 활성화합니다 */
+        vertical-align: top; /* 내용을 상단에 정렬합니다 */
+        max-width: 100px; /* 적절하게 조절할 수 있습니다 */
+    }
+</style>
+
+
 </head>
 <body>
     <!-- GNB -->
