--- a/Web/templates/security_rules.html
+++ b/Web/templates/security_rules.html
@@ -2,18 +2,34 @@
 
 {% block title %}Security Rules{% endblock %}
 
+{% block head %}
+
+
+<style>
+  .custom-table .table td {
+    word-break: break-word !important;
+    overflow-wrap: break-word !important;
+    white-space: normal !important;
+    vertical-align: top !important;
+  }
+</style>
+
+
+
+{% endblock %}
+
 {% block content %}
 <h1>Security Rules</h1>
 
-<table class="table">
+<table class="table custom-table"">
     <!-- Table Header -->
     <thead class="thead-light">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Rule Name</th>
             <th scope="col">Description</th>
-            <th scope="col">tactics</th>
-            <th scope="col">technique</th>
+            <th scope="col">Tactics</th>
+            <th scope="col">Technique</th>
             <th scope="col">Actions</th>
         </tr>
     </thead>
@@ -23,9 +39,9 @@
         <tr>
             <td>{{ rule.id }}</td>
             <td>{{ rule.rule }}</td>
-            <td>{{ rule.description }}</td>
-            <td>{{ rule.tactics }}</td>
-            <td>{{ rule.technique }}</td>
+            <td class="wrap-text">{{ rule.description }}</td>
+            <td class="wrap-text">{{ rule.tactics }}</td>
+            <td class="wrap-text">{{ rule.technique }}</td>
             <td>
                 <a href="{{ url_for('edit_rule', rule_id=rule.id) }}" class="btn btn-sm btn-primary">Edit</a>
                 <a href="{{ url_for('delete_rule', rule_id=rule.id) }}" class="btn btn-sm btn-danger" onclick="return confirm('Are you sure?')">Delete</a>
